syntax = "proto3"; // 协议版本

// 选项配置
option java_multiple_files = true;
//生成位置
option java_package = "com.github.axinger.api";
//option java_outer_classname = "SimpleProto";
import "google/protobuf/wrappers.proto";

import "google/protobuf/struct.proto";

service Simple {

  /**
    * 普通 RPC
   */
  rpc SendMessage (MyRequest) returns (MyResponse); // 普通 RPC

  /**
    * 服务端流式
   */
  rpc SendMessageStream (MyRequest) returns (stream MyResponse);

  /**
    * StringValue参数
   */
  rpc Get1 (google.protobuf.StringValue) returns (google.protobuf.StringValue);

  /**
    * Struct参数
   */
  rpc Get2 (google.protobuf.StringValue) returns (MyStructDto);
}

message MyRequest {
  string name = 1;
  int32 value = 2;
}

message MyResponse {
  string message = 1;
  int64 result = 2;
}

// 请求消息：包含一个 Struct 字段
message MyStructDto {
  google.protobuf.Struct details = 1;
}




